[workspace]
members = [
    ".",
    "iced_forms_derive",
    "iced_forms",
    "iced_forms_test",
]

[package]
name = "archiwumz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
futures = "0.3.21"
iced = { version = "0.4.2", features = ["tokio", "pure"] }
itertools = "0.10.3"
rust_decimal = { version = "1.23.1" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
toml = { version = "0.5.9", features = ["indexmap", "preserve_order"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.11", features = ["tracing", "env-filter", "local-time"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
iced_forms = {path = "./iced_forms"}
