[package]
name = "iced_forms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["tokio", "pure"] }
thiserror = "1"
rust_decimal = { version = "1.23" }
chrono = { version = "0.4" }
uuid = { version = "1.0.0", features = ["v4"] }
serde = "1.0.137"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
